updated to version 0.1.2, analyser runs (but crashes) with gradle plugin under version 7