@@ -18,23 +18,15 @@ plugins {
 }
 
 group 'org.e2immu'
-version '0.1.0a'
+version '0.1.2'
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_15
-    targetCompatibility = JavaVersion.VERSION_15
-}
-
-compileJava {
-    options.compilerArgs.add("--enable-preview")
-}
-
-compileTestJava {
-    options.compilerArgs.add("--enable-preview")
+    sourceCompatibility = JavaVersion.VERSION_16
+    targetCompatibility = JavaVersion.VERSION_16
 }
 
 dependencies {
-    implementation group: 'org.e2immu', name: 'e2immu-support', version: '0.1.0'      // LGPL 3.0
+    implementation group: 'org.e2immu', name: 'e2immu-support', version: '0.1.2'      // LGPL 3.0
 
     implementation project(':analyser')
 
@@ -49,7 +41,6 @@ dependencies {
 }
 
 test {
-    jvmArgs("--enable-preview")
     useJUnitPlatform()
 }
 
@@ -89,6 +80,11 @@ publishing {
                     }
                 }
             }
+        }
+        mavenJava(MavenPublication) {
+            groupId = 'org.e2immu'
+            artifactId = 'analyser-store-uploader'
+            from components.java
         }
     }
 }
